Fixed layout bugs for large screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ footer a:hover {
 }
 
 .main {
+    text-align: center;
     width: 100%;
 }
 
@@ -75,12 +76,15 @@ footer a:hover {
     display: inline-block;
     width: 50%;
     height: auto;
-    float: left;
+    vertical-align: top;
+    max-width: 650px;
 }
 
 .portfolio .desc {
     display: inline-block;
     width: 50%;
+    max-width: 650px;
+    text-align: left;
 }
 
 .portfolio h2 {
